--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,4 +12,19 @@
 }
 .contact-form .input:nth-child(2) {
     width: calc(100% - 10px);
-}s
+}
+.form-margin-20{
+	margin-right: 20%;
+}
+.form-margin-6{
+  margin-right: 6%;
+}
+.form-margin-4{
+  margin-right: 4%;
+}
+.form-margin-8{
+  margin-right: 8%;
+}
+.form-width-40{width: 40%;}
+.text-data{color: red; text-align: center;}
+.board_header {background-color: none repeat scroll 0 0 #00468c !important;}
