--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -34,7 +34,7 @@
 					</li>
 					<li class="has-dropdown"><a href="#">Post</a>
             <ul class="dropdown">
-              <li>
+              <li>	
                 <%= link_to "Post a Load", new_load_path %>
               </li>
               <li>
@@ -52,7 +52,7 @@
               </li>         
             </ul>
           </li>
-					<li><a href="#service">Services</a></li>
+					<li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
 					<li><a href="#pricing">Prices</a></li>
 					<li><a href="#team">Team</a></li>
 					<li class="has-dropdown"><a href="#blog">Blog</a>
