Modification on contact us page

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -31,3 +31,4 @@
 .calculate-data{display: none;}
 #error_distance_from{display: none;color: red}
 #error_distance_to{display: none;color: red}
+#contact_subject {margin-right: 538px; margin-bottom: 20px;}
