--- a/app/views/contactus/contact_mail.html.erb
+++ b/app/views/contactus/contact_mail.html.erb
@@ -3,6 +3,11 @@
     <meta content=‘text/html; charset=UTF-8’ http–equiv=‘Content-Type’ />
   </head>
   <body>
-      <h1>Hi <%= @user.email %></h1>
+  	<h2>Please find the details.</h2>
+      <p>Email: <%= @user.email %></p>
+      <p>Name: <%= @user.name %></p>
+      <p>Mobile Number: <%= @user.mobile_number %></p>
+      <p>Subject: <%= @user.subject %></p>
+      <p>Message: <%= @user.messsage %></p>
   </body>
 </html>
