--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,3 +1,4 @@
+
 <!-- Contact -->
 	<div id="contact" class="section md-padding">
 
@@ -54,10 +55,12 @@
 						   </div>
 						  <% end %>
 						<% end %>
-						<%= f.text_field :name, class: "input", placeholder:"Name" , :required => true %>
-						<%= f.email_field :email, class: "input", placeholder:"Email" , :required => true %>
-						<%= f.text_field :subject, class: "input", placeholder:"Subject" , :required => true %>
-						<%= f.text_area :messsage, class: "input", placeholder:"Message" , :required => true %>
+            <%= f.text_field :mobile_number, class: "input", placeholder:"Enter Mobile Number *" , :required => true %>
+						<%= f.text_field :name, class: "input", placeholder:"Enter Name *" , :required => true %>
+						<%= f.email_field :email, class: "input", placeholder:"Enter E-mail Address *" , :required => true %>
+						<%#= f.text_field :subject, class: "input", placeholder:"Subject*" , :required => true %>
+            <%= f.select :subject, options_for_select(Contact::CONTACT_CATEGORY.map {|k| [k.humanize.capitalize]}), :prompt=>"Please Select Subject" %>
+						<%= f.text_area :messsage, class: "input", placeholder:"Write Message *" , :required => true %>
 						<%= f.submit "Send message", class: "main-btn" %>
 					<% end %>
 				</div>
