--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -43,7 +43,6 @@
 					</div>
 				</div>
 				<!-- /contact -->
-
 				<!-- contact form -->
 				<div class="col-md-8 col-md-offset-2">
 					<%#= form_for :contact, :html => {:class => 'class="contact-form"' } do |f| %>
@@ -55,6 +54,7 @@
 						   </div>
 						  <% end %>
 						<% end %>
+            <%= hidden_field_tag 'country_code', '+91' %>
             <%= f.text_field :mobile_number, class: "input", placeholder:"Enter Mobile Number *" , :required => true %>
 						<%= f.text_field :name, class: "input", placeholder:"Enter Name *" , :required => true %>
 						<%= f.email_field :email, class: "input", placeholder:"Enter E-mail Address *" , :required => true %>
@@ -65,12 +65,14 @@
 					<% end %>
 				</div>
 				<!-- /contact form -->
-
 			</div>
 			<!-- /Row -->
-
 		</div>
 		<!-- /Container -->
-
 	</div>
 	<!-- /Contact -->
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('#contact_mobile_number').val($('#country_code').val());
+    });
+  </script>
