Add hidden field

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -32,3 +32,4 @@
 #error_distance_from{display: none;color: red}
 #error_distance_to{display: none;color: red}
 #contact_subject {margin-right: 538px; margin-bottom: 20px;}
+.contact-text{text-align: center;}
