--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,4 +1,3 @@
-
 <!-- Contact -->
 	<div id="contact" class="section md-padding">
 
@@ -33,7 +32,6 @@
 					</div>
 				</div>
 				<!-- /contact -->
-
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
@@ -44,6 +42,11 @@
 				</div>
 				<!-- /contact -->
 				<!-- contact form -->
+        <div class="contact-text">
+          <h2 class="font-h4">Inquiry Form</h2>
+          <br>
+          <p>Please fill in the requisite details in the following form. We shall get back to you.</p>
+        </div>
 				<div class="col-md-8 col-md-offset-2">
 					<%#= form_for :contact, :html => {:class => 'class="contact-form"' } do |f| %>
 					<%= form_for @contact, url: {action: "create"}, html: {class: "contact-form"} do |f| %>
@@ -70,6 +73,7 @@
 		</div>
 		<!-- /Container -->
 	</div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.4750725976933!2d73.94710931489324!3d18.552608787390266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3c4e0b8713f%3A0x9807fa35834e0fe4!2sss+supply+chain+solution+Pvt.+Ltd.+(3SC)!5e0!3m2!1sen!2sin!4v1517904743929" width="1250" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	<!-- /Contact -->
   <script type="text/javascript">
     $(document).ready(function(){
