--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -52,8 +52,26 @@
               </li>         
             </ul>
           </li>
-					<li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
-					<li><a href="#pricing">Prices</a></li>
+          <li class="has-dropdown"><a href="#">Calculation</a>
+            <ul class="dropdown">
+              <li>
+                <li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
+              </li>
+              <li>
+                <%= link_to "Show Diretion", root_direction_path %>
+              </li>         
+            </ul>
+          </li>
+					<li class="has-dropdown"><a href="#">Help Center</a>
+            <ul class="dropdown">
+              <li>
+                <%= link_to "FAQ", "javaScript:void(0)" %>
+              </li>
+              <li>
+                <%= link_to "Our Network", our_network_path %>
+              </li>         
+            </ul>
+          </li>
 					<li><a href="#team">Team</a></li>
 					<li class="has-dropdown"><a href="#blog">Blog</a>
 						<ul class="dropdown">
