--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -81,7 +81,7 @@
                 <%= link_to "Franchise Inquiry", franchise_inquiry_path %>
               </li>
               <li>
-                <%= link_to "Vehicle Load Inquiry", vehicle_load_inquiry_path %>
+                <%= link_to "Vehicle Loan Inquiry", vehicle_loan_inquiry_path %>
               </li> 
             </ul>
           </li>
