--- a/app/views/services/warehouse_inquiry.html.erb
+++ b/app/views/services/warehouse_inquiry.html.erb
@@ -14,4 +14,5 @@
       <p><span class="ts_font"><b>Warehousing</b> </span>is a part of a bigger logistics management system. It is small, yet important segments in the bigger supply chain management. Many industries use warehouses as a place to store inventory. Whereas many other industries requires it for inbound functions that prepare items for storage and outbound functions that consolidate, pack and ship orders happen in the warehouse. In Today scenario, Industries require warehouses for various important functions like receiving, identifying, sorting, storing/holding, selecting, retrieving and packing goods and dispatching them to the correct destination.</p>
     </div>
   </div>
+  <%= render partial: 'services/form', locals: { contact: @contact } %>
 </div>
