--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,4 +1,4 @@
-<!-- Header -->
+Header -->
 	<header id="home">
 		<!-- Background Image -->
 		<div class="bg-img" style="background-image: url('/assets/bgimage.jpg');">
@@ -14,8 +14,10 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a href="javascript:void(0))">
-							<img class="logo" src="/assets/3SC.png" alt="logo">
-							<img class="logo-alt" src="/assets/3SC.png" alt="logo">
+							<!-- <img class="logo" src="/assets/3SC.png" alt="logo"> -->
+               <img src="<%= asset_path("3SC.png") %>" class="logo" />
+               <img src="<%= asset_path("3SC.png") %>" class="logo-alt" />
+							<!-- <img class="logo-alt" src="/assets/3SC.png" alt="logo"> -->
 						</a>
 					</div>
 					<!-- /Logo -->
@@ -139,4 +141,4 @@
 		<!-- /home wrapper -->
 
 	</header>
-	<!-- /Header -->
+	<!-- /Header
