--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,4 +1,4 @@
-Header -->
+<!-- Section-header -->
 	<header id="home">
 		<!-- Background Image -->
 		<div class="bg-img" style="background-image: url('/assets/bgimage.jpg');">
