--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,7 +1,8 @@
 <!-- Section-header -->
 	<header id="home">
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('/assets/bgimage.jpg');">
+		<div class="bg-img" style="background-image: url('bgimage.jpg');">
+      <!-- <div class="bg-img" style="background-image: url('<%= asset_path("bgimage.png") %>')"> -->
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
