--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,143 +1,142 @@
-<!-- Section-header -->
-	<header id="home">
-		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('/assets/bgimage.jpg');">
-      <!-- <div class="bg-img" style="background-image: url('<%= asset_path("bgimage.png") %>')"> -->
-			<div class="overlay"></div>
-		</div>
-		<!-- /Background Image -->
-
-		<!-- Nav -->
-		<nav id="nav" class="navbar nav-transparent">
-			<div class="container">
-
-				<div class="navbar-header">
-					<!-- Logo -->
-					<div class="navbar-brand">
-						<a href="javascript:void(0))">
-              <img src="<%= asset_path("3SC.png") %>" class="logo" />
-              <img src="<%= asset_path("3SC.png") %>" class="logo-alt" />
-						</a>
-					</div>
-					<!-- /Logo -->
-
-					<!-- Collapse nav button -->
-					<div class="nav-collapse">
-						<span></span>
-					</div>
-					<!-- /Collapse nav button -->
-				</div>
-
-				<!--  Main navigation  -->
-				<ul class="main-nav nav navbar-nav navbar-right">
-					<li>
-						<%= link_to "Home", root_path %>
-					</li>
-					<li class="has-dropdown"><a href="#">Post</a>
-            <ul class="dropdown">
-              <li>	
-                <%= link_to "Post a Load", new_load_path %>
-              </li>
-              <li>
-                <%= link_to "Post a Truck", new_truck_path %>
-              </li>         
-            </ul>
-          </li>
-					<li class="has-dropdown"><a href="#">Board</a>
-            <ul class="dropdown">
-              <li>
-                <%= link_to "Load Board", loads_path %>
-              </li>
-              <li>
-                <%= link_to "Truck Board", trucks_path %>
-              </li>         
-            </ul>
-          </li>
-          <li class="has-dropdown"><a href="#">Calculation</a>
-            <ul class="dropdown">
-              <li>
-                <li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
-              </li>
-              <li>
-                <%= link_to "Show Diretion", root_direction_path %>
-              </li>         
-            </ul>
-          </li>
-					<li class="has-dropdown"><a href="#">Help Center</a>
-            <ul class="dropdown">
-              <li>
-                <%= link_to "FAQ", "javaScript:void(0)" %>
-              </li>
-              <li>
-                <%= link_to "Our Network", our_network_path %>
-              </li>         
-            </ul>
-          </li>
-					<li class="has-dropdown"><a href="#">Services</a>
-            <ul class="dropdown">
-              <li>
-                <%= link_to "Warehouse Inquiry", warehouse_inquiry_path %>
-              </li>
-              <li>
-                <%= link_to "Franchise Inquiry", franchise_inquiry_path %>
-              </li>
-              <li>
-                <%= link_to "Vehicle Loan Inquiry", vehicle_loan_inquiry_path %>
-              </li> 
-            </ul>
-          </li>
-					<li class="has-dropdown"><a href="#blog">Blog</a>
-						<ul class="dropdown">
-							<li><a href="/">blog post</a></li>
-						</ul>
-					</li>
-					<li>
-						<%= link_to "Contact", new_contact_path %>
-					</li>
-					<li class="has-dropdown"><a href="#blog">User</a>
-						<ul class="dropdown">
-							<% if user_signed_in? %>
-								<li>
-									<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
-								</li>
-							<% else %>
-								<li>
-									<%= link_to('Login', new_user_session_path)  %> 
-								</li>
-								<li>
-									<%= link_to('Register', new_user_registration_path)  %>
-								</li>
-							<% end %>	
-						</ul>
-					</li>
-				</ul>
-				<!-- /Main navigation -->
-
-			</div>
-		</nav>
-		<!-- /Nav -->
-
-		<!-- home wrapper -->
-		<div class="home-wrapper">
-			<div class="container">
-				<div class="row">
-
-					<!-- home content -->
-					<div class="col-md-10 col-md-offset-1">
-						<div class="home-content">
-							<h1 class="white-text">We Are Creative Agency</h1>
-							<p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
-							</p>
-							<button class="white-btn">Get Started!</button>
-							<button class="main-btn">Learn more</button>
-						</div>
-					</div>
-					<!-- /home content -->
-
-				</div>
-			</div>
-		</div>
-		<!-- /home wrapper -->
-
-	</header>
-	<!-- /Header
+<!-- Header -->
+ 	<header id="home">
+ 		<!-- Background Image -->
+ 		<div class="bg-img" style="background-image: url('/assets/bgimage.jpg');">
+ 			<div class="overlay"></div>
+ 		</div>
+ 		<!-- /Background Image -->
+ 
+ 		<!-- Nav -->
+ 		<nav id="nav" class="navbar nav-transparent">
+ 			<div class="container">
+ 
+ 				<div class="navbar-header">
+ 					<!-- Logo -->
+ 					<div class="navbar-brand">
+ 						<a href="javascript:void(0))">
+ 							<img class="logo" src="/assets/3SC.png" alt="logo">
+ 							<img class="logo-alt" src="/assets/3SC.png" alt="logo">
+ 						</a>
+ 					</div>
+ 					<!-- /Logo -->
+ 
+ 					<!-- Collapse nav button -->
+ 					<div class="nav-collapse">
+ 						<span></span>
+ 					</div>
+ 					<!-- /Collapse nav button -->
+ 				</div>
+ 
+ 				<!--  Main navigation  -->
+ 				<ul class="main-nav nav navbar-nav navbar-right">
+ 					<li>
+ 						<%= link_to "Home", root_path %>
+ 					</li>
+ 					<li class="has-dropdown"><a href="#">Post</a>
+             <ul class="dropdown">
+               <li>	
+                 <%= link_to "Post a Load", new_load_path %>
+               </li>
+               <li>
+                 <%= link_to "Post a Truck", new_truck_path %>
+               </li>         
+             </ul>
+           </li>
+ 					<li class="has-dropdown"><a href="#">Board</a>
+             <ul class="dropdown">
+               <li>
+                 <%= link_to "Load Board", loads_path %>
+               </li>
+               <li>
+                 <%= link_to "Truck Board", trucks_path %>
+               </li>         
+             </ul>
+           </li>
+           <li class="has-dropdown"><a href="#">Calculation</a>
+             <ul class="dropdown">
+               <li>
+                 <li> <%= link_to "Distance Calculator", distance_calculation_path %></li>
+               </li>
+               <li>
+                 <%= link_to "Show Diretion", root_direction_path %>
+               </li>         
+             </ul>
+           </li>
+ 					<li class="has-dropdown"><a href="#">Help Center</a>
+             <ul class="dropdown">
+               <li>
+                 <%= link_to "FAQ", "javaScript:void(0)" %>
+               </li>
+               <li>
+                 <%= link_to "Our Network", our_network_path %>
+               </li>         
+             </ul>
+           </li>
+ 					<li class="has-dropdown"><a href="#">Services</a>
+             <ul class="dropdown">
+               <li>
+                 <%= link_to "Warehouse Inquiry", warehouse_inquiry_path %>
+               </li>
+               <li>
+                 <%= link_to "Franchise Inquiry", franchise_inquiry_path %>
+               </li>
+               <li>
+                 <%= link_to "Vehicle Loan Inquiry", vehicle_loan_inquiry_path %>
+               </li> 
+             </ul>
+           </li>
+ 					<li class="has-dropdown"><a href="#blog">Blog</a>
+ 						<ul class="dropdown">
+ 							<li><a href="/">blog post</a></li>
+ 						</ul>
+ 					</li>
+ 					<li>
+ 						<%= link_to "Contact", new_contact_path %>
+ 					</li>
+ 					<li class="has-dropdown"><a href="#blog">User</a>
+ 						<ul class="dropdown">
+ 							<% if user_signed_in? %>
+ 								<li>
+ 									<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+ 								</li>
+ 							<% else %>
+ 								<li>
+ 									<%= link_to('Login', new_user_session_path)  %> 
+ 								</li>
+ 								<li>
+ 									<%= link_to('Register', new_user_registration_path)  %>
+ 								</li>
+ 							<% end %>	
+ 						</ul>
+ 					</li>
+ 				</ul>
+ 				<!-- /Main navigation -->
+ 
+ 			</div>
+ 		</nav>
+ 		<!-- /Nav -->
+ 
+ 		<!-- home wrapper -->
+ 		<div class="home-wrapper">
+ 			<div class="container">
+ 				<div class="row">
+ 
+ 					<!-- home content -->
+ 					<div class="col-md-10 col-md-offset-1">
+ 						<div class="home-content">
+ 							<h1 class="white-text">We Are Creative Agency</h1>
+ 							<p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
+ 							</p>
+ 							<button class="white-btn">Get Started!</button>
+ 							<button class="main-btn">Learn more</button>
+ 						</div>
+ 					</div>
+ 					<!-- /home content -->
+ 
+ 				</div>
+ 			</div>
+ 		</div>
+ 		<!-- /home wrapper -->
+ 
+ 	</header>
+ 	<!-- /Header -->
