--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
+  <div class="error-set">
+    <%= devise_error_messages! %>
+  </div>
   <div class="field user-form-width">
     <%= f.label :email %><span>*</span><br />
     <%= f.email_field :email, autofocus: true, placeholder: "Email" %>
@@ -95,3 +96,10 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#new_user").submit(function(){
+      $('.error-set').show();
+    });
+  });
+</script>
