--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -319,7 +319,8 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 #nav.nav-transparent {
-    background: transparent;
+    /*background: transparent;*/
+    background: #1C1D21;
 }
 
 
