--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<div class="container">
+<div class="container container-padding-top">
   <h2>Post a Truck</h2>
   <p>Plese fill the following form to load  truck details</p>
   <fieldset><legend>Basic Details</legend></fieldset>
