--- a/app/views/loads/distance_calculation.html.erb
+++ b/app/views/loads/distance_calculation.html.erb
@@ -1,5 +1,7 @@
-<h1>Calculate <span class="color_orange">Distance</span></h1>
-<p>Please enter source city and destination city to calculate distance.</p>
+<div class="header-text">
+  <h1>Calculate <span class="color_orange">Distance</span></h1>
+  <p>Please enter source city and destination city to calculate distance.</p>
+</div>
 <div class="container"> 
   <%= form_tag("/distance_calculation", method: "get", id:"distance-from", remote: true ) do %>
     <div class="row">
