--- a/app/views/loads/_distance_calculation.html.erb
+++ b/app/views/loads/_distance_calculation.html.erb
@@ -1,7 +1,8 @@
 <% if response.present? %>
-  <div>
-    <h4 class="mar-all-0 tab-bg-dark-navy-blue padding-10">Distance Details</h4>
-  </div>
+  
+  <div style="float:right;">
+  
+  <h4>Distance Details</h4>
   <table class="table table-bordered table-condensed table-striped cf  table-hover">
     <tbody><tr>
         <td class="numeric">Source City</td>
@@ -29,4 +30,5 @@
     </tr>
     </tbody>
   </table>
+  </div>
 <% end %>
