--- a/app/views/help_center/our_network.html.erb
+++ b/app/views/help_center/our_network.html.erb
@@ -1,14 +1,29 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwzFICznWaTiSDezTgXy9TNj0amM9oWaM&callback=initMap"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> 
-<div class="map-div">
-  <div id="multi_markers"></div>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 col-sm-4 border-right">
+        <h1 class="font-32">Our <span class="color_orange font-32">Network</span></h1>
+        <h2 class="font-24">Total <span class="color_orange font-24">Users</span></h2>
+        <p>Our satisfied users.</p>
+        <h5 class="mar-top-40">Total <span class="color_orange">Customers</span></h5>
+        <h4>
+            <span id="cphContent_lblCustomers" class="color_orange"><%= User.count%></span></h4>
+        <h5>Total <span class="color_orange">Transporters</span></h5>
+        <h4>
+            <span id="cphContent_lblTransporters" class="color_orange"><%=Truck.count %></span></h4>
+    </div>
+    <div class="col-md-9 col-sm-8 map-align">
+      <div id="multi_markers"></div>
+    </div>
+  </div>
 </div>
 <script type="text/javascript">
-	var handler = Gmaps.build('Google');
-	handler.buildMap({ internal: {id: 'multi_markers'}}, function(){
-	  var markers = handler.addMarkers(<%=raw @lat_lng.to_json %>);
-	  handler.bounds.extendWith(markers);
-	  handler.fitMapToBounds();
-	});
+  var handler = Gmaps.build('Google');
+  handler.buildMap({ internal: {id: 'multi_markers'}}, function(){
+    var markers = handler.addMarkers(<%=raw @lat_lng.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
 </script>
