--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -13,59 +13,97 @@
         <% end %>
       <% end %>
     </div>
-     <div class="form-group form-margin-6">
-      <label for="from">Load Type<span>*</span></label>
-        <%= f.select :load_type, options_for_select(Load::LOAD_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_type] : ''  ), :prompt=>"Select Load Type" %>      
-    </div>
-      <div class="form-group form-margin-20">
+    <table cellpadding="1" cellspacing="1" class="tblstyle tblstyle-load">
+      <tr>
+        <td>
+        <div class="form-group form-margin-6">
+          <label for="from">Load Type<span>*</span></label>
+            <%= f.select :load_type, options_for_select(Load::LOAD_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_type] : ''  ), :prompt=>"Select Load Type" %>      
+        </div>
+      </td>
+      <td>
+        <div class="form-group form-margin-20">
         <label for="from">From<span>*</span></label>
         <%= f.select 'load_from', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:load].present? ? params[:load][:load_from] : ''), :class=> "input control-label col-sm-4", :prompt=>"Source" %>
       </div>
-      <div class="form-group">
+      </td>
+      <td>
+        <div class="form-group">
         <label for="to">To <span>*</span></label>
         <%= f.select 'load_to', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:load].present? ? params[:load][:load_to] : ''), :prompt=>"Destination" %>
       </div>
-      <br>
-      <%# if params[:load].present? and params[:load][:load_type] == "Full load" %>
+      </td>
+    </tr>
+    <tr>
+        <td>   </td>
+      </tr>
+    <tr>
+      <td>
         <div class="form-group form-margin-6" id="material">
           <label for="from">Material<span>*</span></label>
             <%= f.select :load_material, options_for_select(Load::LOAD_MATERIAL.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_material] : ''), :prompt=>"Material" %>      
         </div>
-     <%# end %>
-     <%# if params[:load].present? and params[:load][:load_type] == "Full load" %>
-        <div class="form-group" id="weight-of-load">
+      </td>
+      <td>
+       <div class="form-group" id="weight-of-load">
           <label for="from">Weight(Metric Ton)<span>*</span></label>
             <%= f.select :load_weight, options_for_select(Load::LOAD_WEIGHT.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_weight] : ''), :prompt=>"Weight" %>
-        </div>
-      <%# end %>
-      <div class="form-group" id="pin-code-source">
+        </div> 
+      </td>
+      <td>
+        <div class="form-group" id="pin-code-source">
         <label for="from">Source pin code<span>*</span></label>
          <%= f.text_field :source_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Source pin code" %>
       </div>
-      <br>
-      <% if params[:load].present? and params[:load][:load_type] != "Part load" %>
+      </td>
+    </tr>
+    <tr>
+        <td>   </td>
+    <tr><td>
+      <%# if params[:load].present? and params[:load][:load_type] != "Part load" %>
         <div class="form-group form-margin-6 no-of-truck">
           <label for="from">No. of Truck<span>*</span></label>
             <%= f.select :load_no_of_truck, options_for_select(Load::NO_OF_TRUCKS.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_no_of_truck] : ''), :prompt=>"No. of Truck" %>
         </div>
-      <% end %>
-      <div class="form-group form-margin-4 form-width-40">
+      <%# end %>
+    </td>
+    <td>
+      <div class="form-group form-margin-4">
         <label for="from">Scheduled Date </span></label>
          <span> <%= f.text_field :load_schedule_date, :id=> "datepicker" %></span>
       </div>
+    </td>
+  </tr>
+  <tr>
+        <td> </td>
+      </tr>
+  <tr>
+    <td>
       <div class="form-group" id="pin-code-destination">
         <label for="from">Destination pin code<span>*</span></label>
          <%= f.text_field :destination_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Destination pin code" %>
       </div>
-      <% if params[:load].present? and params[:load][:load_type] != "Part load" %>
-        <div class="form-group form-margin-8 " id="truck-type">
-          <label for="from">Truck Type<span>*</span></label>
-            <%= f.select :load_truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_truck_type] : ''), :prompt=>"Truck Type" %>
-        </div>
-      <% end %>
-      <div>
-        <%= f.submit "Send Post", class: "main-btn" %>
+    </td>
+    <td>
+      <%# if params[:load].present? and params[:load][:load_type] != "Part load" %>
+          <div class="form-group  " id="truck-type">
+            <label for="from">Truck Type<span>*</span></label>
+              <%= f.select :load_truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_truck_type] : ''), :prompt=>"Truck Type" %>
+          </div>
+        <%# end %>
+    </td>
+</tr>
+<tr>
+        <td>   </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <div>
+        <%= f.submit "Send Load", class: "main-btn" %>
       </div>
+        </td>
+      </tr>
+      </table>
     <% end -%>
 </div>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -73,27 +111,27 @@
     $( "#datepicker" ).datepicker({ minDate: 0, dateFormat: 'yy-mm-dd' });
 </script>
 <script>
-  $(document).ready(function(){
-    $("#load_load_type").change(function(){
-      if ($("#load_load_type").val() == "Part load") {
-        $('#weight-of-load').hide();
-        $('.no-of-truck').hide();
-        $('#load_source_pin_code').show();
-        $('#load_destination_pin_code').show();
-        $('#pin-code-source').css("display","block");
-        $('#pin-code-destination').css("display","block");
-        $('#truck-type').show();
-    } else {
-        $('#weight-of-load').css("display","block");
-        $('.no-of-truck').css("display","block");
-        $('.truck-type').css("display","block");
-        $('#pin-code-source').css("display","block");
-        $('#pin-code-destination').css("display","block");
-        $('#load_source_pin_code').css("display","block");
-        $('#load_destination_pin_code').css("display","show");
-        $('#material').css("display","show");
-        $('#truck-type').show();
-    }
-    });
-  });
+  // $(document).ready(function(){
+  //   $("#load_load_type").change(function(){
+  //     if ($("#load_load_type").val() == "Part load") {
+  //       $('#weight-of-load').hide();
+  //       $('.no-of-truck').hide();
+  //       $('#load_source_pin_code').show();
+  //       $('#load_destination_pin_code').show();
+  //       $('#pin-code-source').css("display","block");
+  //       $('#pin-code-destination').css("display","block");
+  //       $('#truck-type').show();
+  //   } else {
+  //       $('#weight-of-load').css("display","block");
+  //       $('.no-of-truck').css("display","block");
+  //       $('.truck-type').css("display","block");
+  //       $('#pin-code-source').css("display","block");
+  //       $('#pin-code-destination').css("display","block");
+  //       $('#load_source_pin_code').css("display","block");
+  //       $('#load_destination_pin_code').css("display","show");
+  //       $('#material').css("display","show");
+  //       $('#truck-type').show();
+  //   }
+  //   });
+  // });
 </script>
