--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1752,3 +1752,17 @@ header {
             transform:scale(0);
   }
 }
+
+/*razer*/
+.razorpay-payment-button{
+  background: image-url('/images/PayWithRzp.png') center no-repeat;
+  background-size: contain;
+  box-shadow: none;
+  border: none;
+  outline: none;
+  font-size: 0;
+  height: 36px;
+  width: 230px;
+  padding: 0;
+  cursor: pointer;
+}
