--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -110,7 +110,7 @@
 <script type="text/javascript">
     $( "#datepicker" ).datepicker({ minDate: 0, dateFormat: 'yy-mm-dd' });
 </script>
-<script>
+<!-- <script>
   // $(document).ready(function(){
   //   $("#load_load_type").change(function(){
   //     if ($("#load_load_type").val() == "Part load") {
@@ -134,4 +134,4 @@
   //   }
   //   });
   // });
-</script>
+</script> -->
