--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -33,15 +33,15 @@
  				<!--  Main navigation  -->
  				<ul class="main-nav nav navbar-nav navbar-right">
  					<li>
- 						<%= link_to "Home", root_path %>
+ 						<%= link_to "Home", root_path, :class=>"home-link" %>
  					</li>
  					<li class="has-dropdown"><a href="#">Post</a>
              <ul class="dropdown">
                <li>	
-                 <%= link_to "Post a Load", new_load_path %>
+                 <%= link_to "Post a Load", new_load_path, :class=> "post-load" %>
                </li>
                <li>
-                 <%= link_to "Post a Truck", new_truck_path %>
+                 <%= link_to "Post a Truck", new_truck_path, :class=> "post-truck" %>
                </li>         
              </ul>
            </li>
@@ -71,7 +71,7 @@
                  <%= link_to "FAQ", "javaScript:void(0)" %>
                </li>
                <li>
-                 <%= link_to "Our Network", our_network_path %>
+                 <%= link_to "Our Network", our_network_path, :class=>"our-network" %>
                </li>         
              </ul>
            </li>
@@ -142,3 +142,17 @@
  
  	</header>
  	<!-- /Header -->
+<script type="text/javascript">
+  $('.our-network').click(function() {
+    location.reload(true)
+  });
+  $('.post-load').click(function() {
+    location.reload(true)
+  });
+  $('.post-truck').click(function() {
+    location.reload(true)
+  });
+  $('.home-link').click(function() {
+    location.reload(true)
+  });
+</script>
