--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -87,7 +87,8 @@
   <h2>Other details</h2>
   <div class="field user-form-width">
   <%= f.label :aadhaar_no %><br />
-    <%= f.text_field :other_detail_aadhaar_no , placeholder: "Aaadhaar Number" %> 
+    <%= f.file_field :aadhaar_no_image %>
+    <%#= f.text_field :other_detail_aadhaar_no , placeholder: "Aaadhaar Number" %> 
   </div>
 
   <div class="actions user-form-width">
