--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -320,7 +320,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 
 #nav.nav-transparent {
     /*background: transparent;*/
-    background: #1C1D21;
+    background: #1C1D21 !important;
 }
 
 
