--- a/app/views/loads/_distance_calculation.html.erb
+++ b/app/views/loads/_distance_calculation.html.erb
@@ -1,6 +1,6 @@
 <% if response.present? %>
   
-  <div style="float:right;">
+  <div class="header-title">
   
   <h4>Distance Details</h4>
   <table class="table table-bordered table-condensed table-striped cf  table-hover">
