--- a/app/views/trucks/index.html.erb
+++ b/app/views/trucks/index.html.erb
@@ -1,8 +1,7 @@
-<div id="divContentBody" class="pad-top-5 " style="min-height: 17px;">
-                    
+<div id="divContentBody" class="pad-top-5 fix-min-height">
     <div class="container">
         <div id="cphContent_upTruckBoard">
-                <div id="divLoginMessage" class="alert alert-info" style="display: none;">
+                <div id="divLoginMessage" class="alert alert-info hide-alert-msg">
                     <button id="btnHideMessage" type="button" class="close">×</button><strong>Info! </strong>Please click
                                             <a id="cphContent_lnkLoginToContinue" href="javascript:__doPostBack('ctl00$cphContent$lnkLoginToContinue','')">HERE</a>
                     to login to book truck.
@@ -319,7 +318,6 @@
                 <script type="text/javascript" language="javascript">
                     Sys.Application.add_load(function () { ValidateCaptcha(); });
                 </script>
-            
 	<div id="cphContent_ucLogin_popupTandC_backgroundElement" class="modalBackground closeDisabled" style="display: none; position: fixed; left: 0px; top: 0px; z-index: 10000; width: 1273px; height: 1509px;"></div><div id="cphContent_ucLogin_popupActivationRequest_backgroundElement" class="modalBackground" style="display: none; position: fixed; left: 0px; top: 0px; z-index: 10000; width: 1273px; height: 1509px;"></div><div id="cphContent_ucLogin_popupActivationRequestedAlready_backgroundElement" class="modalBackground closeDisabled" style="display: none; position: fixed; left: 0px; top: 0px; z-index: 10000; width: 1273px; height: 1509px;"></div><div id="cphContent_ucLogin_popupResetPassword_backgroundElement" class="modalBackground" style="display: none; position: fixed; left: 0px; top: 0px; z-index: 10000; width: 1273px; height: 1509px;"></div></div>
     </div>
 </div>
