--- a/app/views/loads/distance_calculation.html.erb
+++ b/app/views/loads/distance_calculation.html.erb
@@ -2,7 +2,7 @@
   <h1>Calculate <span class="color_orange">Distance</span></h1>
   <p>Please enter source city and destination city to calculate distance.</p>
 </div>
-<div style="width: 100%;height:300px !important;">
+<div class="align-head">
   <div class="flt-lft"> 
     <%= form_tag("/distance_calculation", method: "get", id:"distance-from", remote: true ) do %>
       <div class="row">
