--- a/app/views/trucks/_truck_title.html.erb
+++ b/app/views/trucks/_truck_title.html.erb
@@ -1,7 +1,7 @@
 <div class="form-group">
 	<div class="col-lg-12">
 	    <h1 class="truckBoard-title">Truck <span class="color_orange">Board</span>
-	        <span id="cphContent_lblTotalTruckPostsCount truck-counter-data" style="font-size:25px;"> (<%=  trucks.count %>)</span></h1>
+	        <span id="cphContent_lblTotalTruckPostsCount truck-counter-data" class="load-counter-data"> (<%=  trucks.count %>)</span></h1>
 	    <br>
 	</div>
 </div>
