--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -11,7 +11,7 @@
 		<%= f.text_field :name, class: "input", placeholder:"Enter Name *" , :required => true %>
 		<%= f.email_field :email, class: "input", placeholder:"Enter E-mail Address *" , :required => true %>
 	  <%= f.select :subject, options_for_select(Contact::CONTACT_CATEGORY.map {|k| [k.humanize.capitalize]}, :selected => "#{page_title.present? ? page_title : '' }"), :prompt=>"Please Select Subject" %>
-		<%= f.text_area :messsage, class: "input", placeholder:"Write Message *" , :required => true %>
+		<%= f.text_area :messsage, class: "input messsage-txt", placeholder:"Write Message *" , :required => true %>
 		<%= f.submit "Send message", class: "main-btn" %>
 	<% end %>
 </div>
