--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -94,4 +94,4 @@ border-collapse: separate;
 #nav.nav-transparent {
   background: #1C1D21 !important;
 }
-.messsage-txt{margin-left:14px;}
+/*.messsage-txt{margin-left:14px;}*/
